--- a/loading-test.conf
+++ b/loading-test.conf
@@ -1,3 +1,9 @@
+;1. In Asterisk CLI : console dial #0140101000-0140101099@LOADING-TEST
+;
+;
+;
+;
+
 [LOADING-TEST]
 exten => _#.,1,NoOp(<!------ LOADING TEST IN PROGRESS ------->)
 same => n,Set(RANGE=${EXTEN:1})
