--- a/loading-test.conf
+++ b/loading-test.conf
@@ -1,8 +1,8 @@
-;1. In Asterisk CLI : console dial #0140101000-0140101099@LOADING-TEST
+; Asterisk 1.8.X
+; In Asterisk CLI : console dial #0140101000-0140101099@LOADING-TEST
+; 
 ;
-;
-;
-;
+
 
 [LOADING-TEST]
 exten => _#.,1,NoOp(<!------ LOADING TEST IN PROGRESS ------->)
