--- a/loading-test.conf
+++ b/loading-test.conf
@@ -3,17 +3,32 @@
 ; 
 ;
 
-
 [LOADING-TEST]
 exten => _#.,1,NoOp(<!------ LOADING TEST IN PROGRESS ------->)
 same => n,Set(RANGE=${EXTEN:1})
 same => n,Set(FROM_EXTEN=${CUT(RANGE,"-",1)})
 same => n,Set(TO_EXTEN=${CUT(RANGE,"-",2)})
+same => n,Set(TIMESLOT_LIMIT_ENABLE=${CUT(RANGE,":",2)})
+same => n,Set(FILE_REPORT_LOG=${STRFTIME(${EPOCH},GMT-1,%C%y%m%d%H%M)}-${UNIQUEID}-LD.log)
+same => n,Set(TIMESLOT_SEQ_NUMBER=1)
+same => n,Set(TIMESLOT_LIMIT=30)
 same => n,NoOp(<!------ RANGE IS : ${FROM_EXTEN} - ${TO_EXTEN})
 same => n,Set(i=${FROM_EXTEN})
+
 same => n,While($[${i} < ${TO_EXTEN}])
-same => n,NoOp(<!----- *** ${i} *** --->)
+same => n,Originate(${TRUNK_TSP/${i},exten,LOADING-TEST,${i},1)
+same => n,NoOp(<!-- CHANNEL SEQ NUMBER : ${TIMESLOT_SEQ_NUMBER} ${i} ${ORIGINATE_STATUS} -------->)
 same => n,Set(i=$[${i} + 1])
-same => n,EndWhile()
-same => n,HangUp()
+same => n,GotoIf($["${TIMESLOT_LIMIT_ENABLE}" = "Y"]?:NO_TIMESLOT_LIMIT)
+same => n,Set(TIMESLOT_SEQ_NUMBER=$[${TIMESLOT_SEQ_NUMBER} + 1])
+same => n,GotoIf($["${TIMESLOT_SEQ_NUMBER}" = "${TIMESLOT_LIMIT}"]?:TIMESLOT_EXCEEDED)
+same => n(NO_TIMESLOT_LIMIT),EndWhile()
+same => n(TIMESLOT_EXCEEDED),NoOp(<!---- TIMESLOT_EXCEEDED : ${TIMESLOT_SEQ_NUMBER} -------->)
+same => n(STOP),HangUp()
+
+
+exten => _X.,1,NoOp(<----- CHANNEL : ${EXTEN} ----->)
+same => n,MusicOnHold()
+same => n,HanUp()
+
 
