--- a/loading-test.conf
+++ b/loading-test.conf
@@ -1,17 +1,24 @@
 ; Asterisk 1.8.X
-; In Asterisk CLI : console dial #0140101000-0140101099@LOADING-TEST
-; 
+; Author : Serge Carpentier
+; In Asterisk CLI : 
+;Mode Range
+; console dial #RANGE_START-RANGE_END:TIMESLOT_LIMIT_ENABLE*TIMESLOT_QTY@CONTEXT
+; console dial #33100000000-33100000099:Y*10@LOADING-TEST
 ;
+;Mode UNIQ DID withe charge Test
+; console dial #RANGE_START-RANGE_END:TIMESLOT_LIMIT_ENABLE*TIMESLOT_QTY@CONTEXT
+; console dial #33100000033-UNIQ:Y*10@LOADING-TEST
 
 [LOADING-TEST]
 exten => _#.,1,NoOp(<!------ LOADING TEST IN PROGRESS ------->)
+same => n,Set(TRUNK-AA=YOUR_PROVIDER)
 same => n,Set(RANGE=${EXTEN:1})
 same => n,Set(FROM_EXTEN=${CUT(RANGE,"-",1)})
 same => n,Set(TO_EXTEN=${CUT(CUT(RANGE,"-",2),":",1)})
 same => n,Set(TIMESLOT_LIMIT_ENABLE=${CUT(CUT(RANGE,":",2),"*",1)})
 same => n,Set(TIMESLOT_LIMIT=${CUT(CUT(RANGE,":",2),"*",2)})
 same => n,Set(FILE_REPORT_LOG=${STRFTIME(${EPOCH},GMT-1,%C%y%m%d%H%M)}-${UNIQUEID}-LD.log)
-same => n,Set(TIMESLOT_SEQ_NUMBER=1)
+same => n,Set(TIMESLOT_SEQ_NUMBER=0)
 same => n,Set(i=${FROM_EXTEN})
 same => n,NoOp(<!- RANGE IS: ${FROM_EXTEN} - ${TO_EXTEN} / TIMESLOT LIMIT: ${TIMESLOT_LIMIT_ENABLE} / TIMESLOTS: ${TIMESLOT_LIMIT} )
 same => n,GotoIf($["${TO_EXTEN}" = "UNIQ"]?UNIQ:RANGE)
@@ -19,7 +26,7 @@ same => n,GotoIf($["${TO_EXTEN}" = "UNIQ"]?UNIQ:RANGE)
 
 same => n(RANGE),NoOp(<!---------- RANGE MODE with ${TIMESLOT_LIMIT} TIMESLOTS -------->)
 same => n,While($[${i} < ${TO_EXTEN}])
-same => n,Originate(IAX2/8305375141:652717@37.59.32.88/${i},exten,LOADING-TEST,${i},1)
+same => n,Originate(${TRUNK-AA}/${i},exten,LOADING-TEST,${i},1)
 same => n,NoOp(<!-- CHANNEL SEQ NUMBER : ${TIMESLOT_SEQ_NUMBER} ${i} ${ORIGINATE_STATUS} -------->)
 same => n,Set(i=$[${i} + 1])
 same => n,GotoIf($["${TIMESLOT_LIMIT_ENABLE}" = "Y"]?:NO_TIMESLOT_LIMIT)
@@ -31,19 +38,13 @@ same => n(TIMESLOT_EXCEEDED),NoOp(<!---- TIMESLOT_EXCEEDED : ${TIMESLOT_SEQ_NUMB
 same => n(STOP),HangUp()
 
 same => n(UNIQ),NoOp(<!---------- UNIQ MODE with ${TIMESLOT_LIMIT} TIMESLOTS -------->)
-same => n(UNIQ),While($[${TIMESLOT_SEQ_NUMBER} < ${TO_EXTEN}])
-same => n,Originate(IAX2/8305375141:652717@37.59.32.88/${i},exten,LOADING-TEST,${i},1)
-same => n,NoOp(<!-- CHANNEL SEQ NUMBER : ${TIMESLOT_SEQ_NUMBER} ${i} ${ORIGINATE_STATUS} -------->)
-same => n,Set(i=$[${i} + 1])
-same => n,GotoIf($["${TIMESLOT_LIMIT_ENABLE}" = "Y"]?:NO_TIMESLOT_LIMIT)
+same => n(UNIQ),While($[${TIMESLOT_SEQ_NUMBER} < ${TIMESLOT_LIMIT}])
+same => n,Originate(${TRUNK-AA}/${FROM_EXTEN},exten,LOADING-TEST,${FROM_EXTEN},1)
+same => n,NoOp(<!-- CHANNEL SEQ NUMBER : ${TIMESLOT_SEQ_NUMBER} ${FROM_EXTEN} ${ORIGINATE_STATUS} -------->)
+;same => n,Set(i=$[${i} + 1])
 same => n,Set(TIMESLOT_SEQ_NUMBER=$[${TIMESLOT_SEQ_NUMBER} + 1])
 same => n,GotoIf($["${TIMESLOT_SEQ_NUMBER}" = "${TIMESLOT_LIMIT}"]?TIMESLOT_EXCEEDED)
 same => n(NO_TIMESLOT_LIMIT),EndWhile()
 same => n,Goto(STOP)
 same => n(TIMESLOT_EXCEEDED),NoOp(<!---- TIMESLOT_EXCEEDED : ${TIMESLOT_SEQ_NUMBER} -------->)
 same => n(STOP),HangUp()
-
-exten => _X.,1,NoOp(<----- CHANNEL : ${EXTEN} ----->)
-same => n,MusicOnHold()
-same => n,HanUp()
-
