--- a/loading-test.conf
+++ b/loading-test.conf
@@ -48,3 +48,8 @@ same => n(NO_TIMESLOT_LIMIT),EndWhile()
 same => n,Goto(STOP)
 same => n(TIMESLOT_EXCEEDED),NoOp(<!---- TIMESLOT_EXCEEDED : ${TIMESLOT_SEQ_NUMBER} -------->)
 same => n(STOP),HangUp()
+
+exten => _X.,1,NoOp(<----- CHANNEL : ${EXTEN} ----->)
+same => n,MusicOnHold()
+same => n,HanUp()
+
