--- a/loading-test.conf
+++ b/loading-test.conf
@@ -1,23 +1,23 @@
 ; Asterisk 1.8.X
 ; Author : Serge Carpentier
 ; In Asterisk CLI : 
-;Mode Range
+; *** Range Mode ***
 ; console dial #RANGE_START-RANGE_END:TIMESLOT_LIMIT_ENABLE*TIMESLOT_QTY@CONTEXT
-; console dial #33100000000-33100000099:Y*10@LOADING-TEST
+; console dial #33100000000-33100000099:Y*10@CNTX_OVERLOAD_TEST
 ;
-;Mode UNIQ DID withe charge Test
+; *** UNIQ Mode - Only 1 DID with charge Test
 ; console dial #RANGE_START-RANGE_END:TIMESLOT_LIMIT_ENABLE*TIMESLOT_QTY@CONTEXT
-; console dial #33100000033-UNIQ:Y*10@LOADING-TEST
+; console dial #33100000033-UNIQ:Y*10@CNTX_OVERLOAD_TEST
 
-[LOADING-TEST]
-exten => _#.,1,NoOp(<!------ LOADING TEST IN PROGRESS ------->)
-same => n,Set(TRUNK-AA=YOUR_PROVIDER)
+[CNTX_OVERLOAD_TEST]
+exten => _#.,1,NoOp(<!------ START TEST LOAD ------->)
+same => n,Set(TRUNK-AA=YOUR_PROVIDER_TRUNK)
 same => n,Set(RANGE=${EXTEN:1})
 same => n,Set(FROM_EXTEN=${CUT(RANGE,"-",1)})
 same => n,Set(TO_EXTEN=${CUT(CUT(RANGE,"-",2),":",1)})
 same => n,Set(TIMESLOT_LIMIT_ENABLE=${CUT(CUT(RANGE,":",2),"*",1)})
 same => n,Set(TIMESLOT_LIMIT=${CUT(CUT(RANGE,":",2),"*",2)})
-same => n,Set(FILE_REPORT_LOG=${STRFTIME(${EPOCH},GMT-1,%C%y%m%d%H%M)}-${UNIQUEID}-LD.log)
+same => n,Set(FILE_REPORT_LOG=/tmp/${STRFTIME(${EPOCH},GMT-1,%C%y%m%d%H%M)}-${UNIQUEID}-LD.log)
 same => n,Set(TIMESLOT_SEQ_NUMBER=0)
 same => n,Set(i=${FROM_EXTEN})
 same => n,NoOp(<!- RANGE IS: ${FROM_EXTEN} - ${TO_EXTEN} / TIMESLOT LIMIT: ${TIMESLOT_LIMIT_ENABLE} / TIMESLOTS: ${TIMESLOT_LIMIT} )
@@ -29,27 +29,32 @@ same => n,While($[${i} < ${TO_EXTEN}])
 same => n,Originate(${TRUNK-AA}/${i},exten,LOADING-TEST,${i},1)
 same => n,NoOp(<!-- CHANNEL SEQ NUMBER : ${TIMESLOT_SEQ_NUMBER} ${i} ${ORIGINATE_STATUS} -------->)
 same => n,Set(i=$[${i} + 1])
-same => n,GotoIf($["${TIMESLOT_LIMIT_ENABLE}" = "Y"]?:NO_TIMESLOT_LIMIT)
+same => n,GotoIf($["${TIMESLOT_LIMIT_ENABLE}" = "Y"]?:NO_TIMESLOT_LIMIT-AA)
 same => n,Set(TIMESLOT_SEQ_NUMBER=$[${TIMESLOT_SEQ_NUMBER} + 1])
-same => n,GotoIf($["${TIMESLOT_SEQ_NUMBER}" = "${TIMESLOT_LIMIT}"]?TIMESLOT_EXCEEDED)
-same => n(NO_TIMESLOT_LIMIT),EndWhile()
-same => n,Goto(STOP)
-same => n(TIMESLOT_EXCEEDED),NoOp(<!---- TIMESLOT_EXCEEDED : ${TIMESLOT_SEQ_NUMBER} -------->)
-same => n(STOP),HangUp()
+same => n,GotoIf($["${TIMESLOT_SEQ_NUMBER}" = "${TIMESLOT_LIMIT}"]?TIMESLOT_EXCEEDED-AA)
+same => n(NO_TIMESLOT_LIMIT-AA),EndWhile()
+same => n,Goto(STOP-AA)
+same => n(TIMESLOT_EXCEEDED-AA),NoOp(<!---- TIMESLOT_EXCEEDED : ${TIMESLOT_SEQ_NUMBER} -------->)
+same => n(STOP-AA),HangUp()
 
 same => n(UNIQ),NoOp(<!---------- UNIQ MODE with ${TIMESLOT_LIMIT} TIMESLOTS -------->)
-same => n(UNIQ),While($[${TIMESLOT_SEQ_NUMBER} < ${TIMESLOT_LIMIT}])
+same => n,While($[${TIMESLOT_SEQ_NUMBER} < ${TIMESLOT_LIMIT}])
 same => n,Originate(${TRUNK-AA}/${FROM_EXTEN},exten,LOADING-TEST,${FROM_EXTEN},1)
 same => n,NoOp(<!-- CHANNEL SEQ NUMBER : ${TIMESLOT_SEQ_NUMBER} ${FROM_EXTEN} ${ORIGINATE_STATUS} -------->)
-;same => n,Set(i=$[${i} + 1])
 same => n,Set(TIMESLOT_SEQ_NUMBER=$[${TIMESLOT_SEQ_NUMBER} + 1])
-same => n,GotoIf($["${TIMESLOT_SEQ_NUMBER}" = "${TIMESLOT_LIMIT}"]?TIMESLOT_EXCEEDED)
+same => n,Set(REAL_CHANNEL_USED=${SHELL(asterisk -rx 'core show channels' | grep ${FROM_EXTEN:4} -c)})
+same => n,Set(REAL_CHANNEL_USED=$[${REAL_CHANNEL_USED} - 1]
+same => n,NoOp(<!----- REAL CHANNEL USED : ${REAL_CHANNEL_USED}------->)
+same => n,Set(WRITE_LOG=${SHELL(echo "${STRFTIME(${EPOCH},GMT-1,%C%y%m%d%H%M)} SEQ.NUM ${TIMESLOT_SEQ_NUMBER} DID/SDA ${FROM_EXTEN} CHAN.LIMIT ${TIMESLOT_LIMIT} CHAN.LOAD ${REAL_CHANNEL_USED}" >>${FILE_REPORT_LOG})})
+same => n,GotoIf($["${REAL_CHANNEL_USED}" = "${TIMESLOT_LIMIT}"]?TIMESLOT_EXCEEDED)
 same => n(NO_TIMESLOT_LIMIT),EndWhile()
 same => n,Goto(STOP)
 same => n(TIMESLOT_EXCEEDED),NoOp(<!---- TIMESLOT_EXCEEDED : ${TIMESLOT_SEQ_NUMBER} -------->)
+same => n,Set(WRITE_LOG=${SHELL(echo "${STRFTIME(${EPOCH},GMT-1,%C%y%m%d%H%M)} TIMESLOT EXCEEDED" >>${FILE_REPORT_LOG})})
 same => n(STOP),HangUp()
 
 exten => _X.,1,NoOp(<----- CHANNEL : ${EXTEN} ----->)
 same => n,MusicOnHold()
 same => n,HanUp()
+
 
